--- a/src/components/BlogIndexPage.module.css
+++ b/src/components/BlogIndexPage.module.css
@@ -1,3 +1,8 @@
+.headerRow {
+  display: flex;
+  flex-direction: row;
+}
+
 .title {
   font-family: Montserrat, sans-serif;
   font-size: 2.5rem;
@@ -8,7 +13,6 @@
   text-rendering: optimizeLegibility;
 }
 .title a {
-  color: black;
   text-decoration: none;
 }
 
