--- a/src/index.module.css
+++ b/src/index.module.css
@@ -24,6 +24,100 @@
   word-wrap: break-word;
 }
 
+:global body {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+:global body.dark-mode {
+  background-color: #232323;
+  color: #dfdfdf;
+}
+
+:global body.dark-node > .headerRow__navlink {
+  color: #dfdfdf;
+}
+
+:global .dark-mode-toggle > button {
+  color: #999;
+
+}
+
+:global .dark-mode-toggle > button:last-child {
+  color: #ffffff;
+}
+
+:global .dark-mode-toggle {
+  display: flex;
+  margin: 15px auto 0 15px;
+}
+
+:global .dark-mode-toggle > button {
+      font-size: 1.2em;
+      background: none;
+      border: none;
+      color: #ffe600;
+      cursor: pointer;
+      transition: color 0.3s ease;
+}
+
+:global .dark-mode-toggle > button:last-child {
+  color: #666;
+}
+
+:global .dark-mode-toggle > button:focus {
+  outline: none;
+}
+
+:global .toggle-control {
+  position: relative;
+  padding: 0 4px;
+  display: flex;
+  align-items: center;
+}
+
+:global input[type='checkbox'].dmcheck {
+  width: 40px;
+  height: 10px;
+  background: #555;
+  position: relative;
+  border-radius: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  vertical-align: 2px;
+  outline: none;
+}
+
+:global input[type='checkbox'].dmcheck:focus-visible {
+  outline: solid 2px white;
+}
+
+:global input[type='checkbox'].dmcheck + label {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  position: absolute;
+  left: 2px;
+  background: #fff;
+  opacity: 0.9;
+  background-color: #f6f6f6;
+}
+
+:global input[type='checkbox'].dmcheck:checked + label {
+    left: 30px;
+}
+
+:global .headerRow {
+  display: flex;
+  vertical-align: center;
+}
+
 :global(pre),
 :global(code) {
   font-family: Consolas, Menlo, Monaco, source-code-pro, "Courier New", monospace;
